# portfolio-simulator

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  RESULTS.md  pyproject.toml  requirements-dev.txt  requirements.txt
common/schemas/: benchmark_result.schema.json
docs/: data-dictionary.md  environment.md  methodology.md
docs/benchmarks/: phase3b_engines.md
implementations/cpp/eigen/: CMakeLists.txt
implementations/cpp/eigen/src/: portfolio_compute.cpp
implementations/cpp/openmp/: CMakeLists.txt
implementations/cpp/openmp/python/: portfolio_openmp.py
implementations/cpp/openmp/src/: portfolio_compute.cpp  portfolio_compute_tile4.cpp  portfolio_compute_unroll.cpp
implementations/fortran/openmp/: CMakeLists.txt  Makefile
implementations/fortran/openmp/src/: portfolio_compute.f90
implementations/go/goroutines/: Makefile  go.mod  portfolio_compute.go
implementations/java/vector_api/: Makefile
implementations/java/vector_api/src/com/portfoliosimulator/: PortfolioCompute.java
implementations/julia/: Manifest.toml  Project.toml  README.md
implementations/julia/src/: portfolio_compute.jl
implementations/rust/faer/: Cargo.toml
implementations/rust/faer/src/: lib.rs
implementations/rust/rayon/: Cargo.toml
implementations/rust/rayon/.cargo/: config.toml
implementations/rust/rayon/python/: portfolio_rayon.py
implementations/rust/rayon/src/: lib.rs
implementations/rust/rayon_nightly/: Cargo.toml  Makefile
implementations/rust/rayon_nightly/src/: lib.rs
results/: comparison.csv  summary.csv  telemetry.csv
results/exports/: comparison.csv  summary.csv  telemetry.csv
scripts/: convert_to_parquet.py  fetch_data.py  generate_portfolios.py  generate_report.py  run_benchmark.py  setup_phase3.sh  setup_phase3b.sh  validate_data.py
src/benchmark/: db.py  report.py  runner.py
src/compute/: baseline.py  cpp_eigen.py  cpp_openmp.py  cpp_openmp_clang.py  cpp_openmp_tile4.py  cpp_openmp_unroll.py  cupy_gpu.py  dask_local.py  duckdb_sql.py  fortran_openmp.py  go_goroutines.py  java_vector_api.py  jax_cpu.py  julia_loopvec.py  numba_parallel.py  numpy_float32.py  polars_engine.py  pytorch_cpu.py  ray_local.py  rust_faer.py  rust_rayon.py  rust_rayon_nightly.py  spark_local.py
src/data/: fetch.py  storage.py  validate.py
src/portfolio/: generator.py
