[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "portfolio-simulator"
version = "0.1.0"
description = "Reproducible benchmark study: computing portfolio returns at scale"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Staff Data Engineer" },
]
keywords = ["finance", "benchmark", "portfolio", "data-engineering", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data acquisition
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pandas-datareader>=0.10.0",
    "lxml>=5.0.0",           # Wikipedia table parsing
    "html5lib>=1.1",

    # Numeric compute
    "numpy>=1.26.0",

    # Progress and CLI
    "tqdm>=4.66.0",

    # System introspection
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "ipykernel>=6.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jsonschema>=4.21.0",
]

gpu = [
    "cupy-cuda12x>=13.0.0",   # adjust cuda version to match system
]

numba = [
    "numba>=0.59.0",
]

spark = [
    "pyspark>=3.5.0",
    "pyarrow>=15.0.0",
]

dask = [
    "dask[dataframe]>=2024.1.0",
    "distributed>=2024.1.0",
]

all = [
    "portfolio-simulator[dev,numba,spark,dask]",
]

[project.scripts]
ps-fetch     = "scripts.fetch_data:main"
ps-generate  = "scripts.generate_portfolios:main"
ps-benchmark = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src", "common"]
